data/forge_javadoc/1.9.4/processed/net_minecraft_init_Items.md
# Items

**Inheritance:** java.lang.Object → net.minecraft.init.Items

## Class signature

```java
public class Items extends java.lang.Object
```

## Constructors

- `Items()`

## Fields

- `static Item ACACIA_BOAT`
- `static Item ACACIA_DOOR`
- `static Item APPLE`
- `static ItemArmorStand ARMOR_STAND`
- `static Item ARROW`
- `static Item BAKED_POTATO`
- `static Item BANNER`
- `static Item BED`
- `static Item BEEF`
- `static Item BEETROOT`
- `static Item BEETROOT_SEEDS`
- `static Item BEETROOT_SOUP`
- `static Item BIRCH_BOAT`
- `static Item BIRCH_DOOR`
- `static Item BLAZE_POWDER`
- `static Item BLAZE_ROD`
- `static Item BOAT`
- `static Item BONE`
- `static Item BOOK`
- `static ItemBow BOW`
- `static Item BOWL`
- `static Item BREAD`
- `static Item BREWING_STAND`
- `static Item BRICK`
- `static Item BUCKET`
- `static Item CAKE`
- `static Item CARROT`
- `static Item CARROT_ON_A_STICK`
- `static Item CAULDRON`
- `static ItemArmor CHAINMAIL_BOOTS`
- `static ItemArmor CHAINMAIL_CHESTPLATE`
- `static ItemArmor CHAINMAIL_HELMET`
- `static ItemArmor CHAINMAIL_LEGGINGS`
- `static Item CHEST_MINECART`
- `static Item CHICKEN`
- `static Item CHORUS_FRUIT`
- `static Item CHORUS_FRUIT_POPPED`
- `static Item CLAY_BALL`
- `static Item CLOCK`
- `static Item COAL`
- `static Item COMMAND_BLOCK_MINECART`
- `static Item COMPARATOR`
- `static Item COMPASS`
- `static Item COOKED_BEEF`
- `static Item COOKED_CHICKEN`
- `static Item COOKED_FISH`
- `static Item COOKED_MUTTON`
- `static Item COOKED_PORKCHOP`
- `static Item COOKED_RABBIT`
- `static Item COOKIE`
- `static Item DARK_OAK_BOAT`
- `static Item DARK_OAK_DOOR`
- `static Item DIAMOND`
- `static Item DIAMOND_AXE`
- `static ItemArmor DIAMOND_BOOTS`
- `static ItemArmor DIAMOND_CHESTPLATE`
- `static ItemArmor DIAMOND_HELMET`
- `static Item DIAMOND_HOE`
- `static Item DIAMOND_HORSE_ARMOR`
- `static ItemArmor DIAMOND_LEGGINGS`
- `static Item DIAMOND_PICKAXE`
- `static Item DIAMOND_SHOVEL`
- `static Item DIAMOND_SWORD`
- `static Item DRAGON_BREATH`
- `static Item DYE`
- `static Item EGG`
- `static Item ELYTRA`
- `static Item EMERALD`
- `static ItemEnchantedBook ENCHANTED_BOOK`
- `static Item END_CRYSTAL`
- `static Item ENDER_EYE`
- `static Item ENDER_PEARL`
- `static Item EXPERIENCE_BOTTLE`
- `static Item FEATHER`
- `static Item FERMENTED_SPIDER_EYE`
- `static ItemMap FILLED_MAP`
- `static Item FIRE_CHARGE`
- `static Item FIREWORK_CHARGE`
- `static Item FIREWORKS`
- `static Item FISH`
- `static ItemFishingRod FISHING_ROD`
- `static Item FLINT`
- `static Item FLINT_AND_STEEL`
- `static Item FLOWER_POT`
- `static Item FURNACE_MINECART`
- `static Item GHAST_TEAR`
- `static Item GLASS_BOTTLE`
- `static Item GLOWSTONE_DUST`
- `static Item GOLD_INGOT`
- `static Item GOLD_NUGGET`
- `static Item GOLDEN_APPLE`
- `static Item GOLDEN_AXE`
- `static ItemArmor GOLDEN_BOOTS`
- `static Item GOLDEN_CARROT`
- `static ItemArmor GOLDEN_CHESTPLATE`
- `static ItemArmor GOLDEN_HELMET`
- `static Item GOLDEN_HOE`
- `static Item GOLDEN_HORSE_ARMOR`
- `static ItemArmor GOLDEN_LEGGINGS`
- `static Item GOLDEN_PICKAXE`
- `static Item GOLDEN_SHOVEL`
- `static Item GOLDEN_SWORD`
- `static Item GUNPOWDER`
- `static Item HOPPER_MINECART`
- `static Item IRON_AXE`
- `static ItemArmor IRON_BOOTS`
- `static ItemArmor IRON_CHESTPLATE`
- `static Item IRON_DOOR`
- `static ItemArmor IRON_HELMET`
- `static Item IRON_HOE`
- `static Item IRON_HORSE_ARMOR`
- `static Item IRON_INGOT`
- `static ItemArmor IRON_LEGGINGS`
- `static Item IRON_PICKAXE`
- `static Item IRON_SHOVEL`
- `static Item IRON_SWORD`
- `static Item ITEM_FRAME`
- `static Item JUNGLE_BOAT`
- `static Item JUNGLE_DOOR`
- `static Item LAVA_BUCKET`
- `static Item LEAD`
- `static Item LEATHER`
- `static ItemArmor LEATHER_BOOTS`
- `static ItemArmor LEATHER_CHESTPLATE`
- `static ItemArmor LEATHER_HELMET`
- `static ItemArmor LEATHER_LEGGINGS`
- `static ItemPotion LINGERING_POTION`
- `static Item MAGMA_CREAM`
- `static ItemEmptyMap MAP`
- `static Item MELON`
- `static Item MELON_SEEDS`
- `static Item MILK_BUCKET`
- `static Item MINECART`
- `static Item MUSHROOM_STEW`
- `static Item MUTTON`
- `static Item NAME_TAG`
- `static Item NETHER_STAR`
- `static Item NETHER_WART`
- `static Item NETHERBRICK`
- `static Item OAK_DOOR`
- `static Item PAINTING`
- `static Item PAPER`
- `static Item POISONOUS_POTATO`
- `static Item PORKCHOP`
- `static Item POTATO`
- `static ItemPotion POTIONITEM`
- `static Item PRISMARINE_CRYSTALS`
- `static Item PRISMARINE_SHARD`
- `static Item PUMPKIN_PIE`
- `static Item PUMPKIN_SEEDS`
- `static Item QUARTZ`
- `static Item RABBIT`
- `static Item RABBIT_FOOT`
- `static Item RABBIT_HIDE`
- `static Item RABBIT_STEW`
- `static Item RECORD_11`
- `static Item RECORD_13`
- `static Item RECORD_BLOCKS`
- `static Item RECORD_CAT`
- `static Item RECORD_CHIRP`
- `static Item RECORD_FAR`
- `static Item RECORD_MALL`
- `static Item RECORD_MELLOHI`
- `static Item RECORD_STAL`
- `static Item RECORD_STRAD`
- `static Item RECORD_WAIT`
- `static Item RECORD_WARD`
- `static Item REDSTONE`
- `static Item REEDS`
- `static Item REPEATER`
- `static Item ROTTEN_FLESH`
- `static Item SADDLE`
- `static ItemShears SHEARS`
- `static Item SHIELD`
- `static Item SIGN`
- `static Item SKULL`
- `static Item SLIME_BALL`
- `static Item SNOWBALL`
- `static Item SPAWN_EGG`
- `static Item SPECKLED_MELON`
- `static Item SPECTRAL_ARROW`
- `static Item SPIDER_EYE`
- `static ItemPotion SPLASH_POTION`
- `static Item SPRUCE_BOAT`
- `static Item SPRUCE_DOOR`
- `static Item STICK`
- `static Item STONE_AXE`
- `static Item STONE_HOE`
- `static Item STONE_PICKAXE`
- `static Item STONE_SHOVEL`
- `static Item STONE_SWORD`
- `static Item STRING`
- `static Item SUGAR`
- `static Item TIPPED_ARROW`
- `static Item TNT_MINECART`
- `static Item WATER_BUCKET`
- `static Item WHEAT`
- `static Item WHEAT_SEEDS`
- `static Item WOODEN_AXE`
- `static Item WOODEN_HOE`
- `static Item WOODEN_PICKAXE`
- `static Item WOODEN_SHOVEL`
- `static Item WOODEN_SWORD`
- `static Item WRITABLE_BOOK`
- `static Item WRITTEN_BOOK`